# RutrackerParser

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
rutracker_tui/: cli.py  config.py  crawler.py  image_ascii.py  models.py  parser.py  storage.py  tui.py
tests/: test_cli.py  test_config.py  test_crawler.py  test_image_ascii.py  test_parser.py  test_storage.py  test_tui.py
